Bug 504435 - Read/write speed is not displayed on Arch Linux
Summary: Read/write speed is not displayed on Arch Linux
Status: RESOLVED FIXED
Alias: None
Product: plasma-systemmonitor
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.3.5
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-05-17 18:46 UTC by Lalit Shankar Chowdhury
Modified: 2025-05-20 15:37 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments
Screenshot (111.04 KB, image/png)
2025-05-17 18:46 UTC, Lalit Shankar Chowdhury
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lalit Shankar Chowdhury 2025-05-17 18:46:40 UTC
Created attachment 181446 [details]
Screenshot

***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports

Please remove this comment after reading and before submitting - thanks!
***

SUMMARY


STEPS TO REPRODUCE
1. Open system monitor
2. Wait for some time
3. Navigate to Processes tab as well

OBSERVED RESULT

Read/write column is empty for running applications

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: Arch Linux (6.14.6-arch1-1 (64-bit))
KDE Plasma Version: 6.3.5
KDE Frameworks Version: 6.14.0
Qt Version: 6.9.0

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2025-05-19 12:29:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libksysguard/-/merge_requests/415
Comment 2 Arjen Hiemstra 2025-05-19 15:01:23 UTC
Git commit 8ed933e643598b85c67203c586a2fec5fc9ee8d5 by Arjen Hiemstra.
Committed on 19/05/2025 at 14:58.
Pushed by ahiemstra into branch 'master'.

processcore: Rewrite ProcessesLinux::getIOStatistics to be less confusing

Apparently this was reading the entire file and then assuming a certain
order of fields. This was pretty hard to follow code that broke easily
because it was using a different pattern from the rest of the functions.
Change it to read line by line and check which field we are reading.
This should make things a fair bit more robust and easier to read.

M  +14   -28   processcore/processes_linux_p.cpp

https://invent.kde.org/plasma/libksysguard/-/commit/8ed933e643598b85c67203c586a2fec5fc9ee8d5
Comment 3 Arjen Hiemstra 2025-05-19 15:15:16 UTC
Git commit 82d0cd19f6532f4ea571a487ab08d3a0b0c462dc by Arjen Hiemstra.
Committed on 19/05/2025 at 15:11.
Pushed by ahiemstra into branch 'Plasma/6.4'.

processcore: Rewrite ProcessesLinux::getIOStatistics to be less confusing

Apparently this was reading the entire file and then assuming a certain
order of fields. This was pretty hard to follow code that broke easily
because it was using a different pattern from the rest of the functions.
Change it to read line by line and check which field we are reading.
This should make things a fair bit more robust and easier to read.


(cherry picked from commit 8ed933e643598b85c67203c586a2fec5fc9ee8d5)

Co-authored-by: Arjen Hiemstra <ahiemstra@heimr.nl>

M  +14   -28   processcore/processes_linux_p.cpp

https://invent.kde.org/plasma/libksysguard/-/commit/82d0cd19f6532f4ea571a487ab08d3a0b0c462dc